Add footer menu

--- a/assets/css/base/_base.scss
+++ b/assets/css/base/_base.scss
@@ -468,6 +468,14 @@ body {
 
 		@include remove-button-underline();
 	}
+
+	ul {
+		list-style-type: none;
+
+		a {
+			text-decoration: none;
+		}
+	}
 }
 
 .site-info {
